manifests/application/rem-stack/components/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rem-api
  labels:
    app.kubernetes.io/name: rem-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rem-api
    app.kubernetes.io/component: api
